KillercodaIngress/deployment-banana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-deployment
  namespace: etkb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: banana-app
  template:
    metadata:
      labels:
        app: banana-app
    spec:
      containers:
      - name: banana-app
        image: hashicorp/http-echo
        args:
          - "-text=banana"

---

kind: Service
apiVersion: v1
metadata:
  name: banana-service
  namespace: etkb
spec:
  selector:
    app: banana-app
  ports:
    - port: 5678
