KillercodaIngress/sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rehber-ingress
  namespace: etkb
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "true"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: /apple
          backend:
            service:
               name: apple-service
               port:
                 number: 5678
        - pathType: Prefix
          path: /banana
          backend:
            service:
               name: banana-service
               port:
                 number: 5678
